# Spotify_Data_Eng_GenAI

./: README.md  app.py  playlist_ids.txt  pyproject.toml  requirements.txt  requirments.txt  spotify_api.py  test.ipynb
Spotify_transformations/transformations/: dbt_project.yml
Spotify_transformations/transformations/models/: all_playlists_refined.sql  audio_features_refined.sql  main_spotify.sql  schema.yml  sources.yml
Spotify_transformations/transformations/models/modeled/: main_spotify.sql
Spotify_transformations/transformations/models/refined/: history_all_playlists_refined.sql  track_information_refined.sql
airflow_dags/: Dockerfile  requirements.txt
airflow_dags/Spotify_transformations/transformations/models/refined/: all_playlists_refined.sql
airflow_dags/dags/: spotify_EL_dag.py
airflow_dags/dags/Spotify_transformations/transformations/models/: schema.yml
airflow_dags/dbt_venv/: pyvenv.cfg
airflow_dags/utils_2/: __init__.py  assistant_api_2.py  check_sys_path.py  playlist_ids.py  sf_conn_2.py  spotify_api_2.py  sql_transformations.py  test.ipynb
assistant_data/: spotify_main_file
misc/: follow_artist_list.json  playlist_ids.txt  test.ipynb
misc/Spotify_transformations/transformations/models/refined/: audio_features_refined.sql  track_information_refined.sql
utils/: __init__.py  assistant_api.py  prompt.py  sf_conn.py  spotify_api.py
